Revision history for Perl module Git::PurePerl:

0.39
     - add a method to generate the sha1 of an object
     - add a raw method to objects
     - add new set of classes to add objects

0.38 Thu Dec 18 10:26:49 GMT 2008
     - add init() method to create a new repository
     - create Git::PurePerl::Loose to handle loose objects
     - make Git::PurePerl::Pack's all_sha1s return a stream

0.37 Fri Dec 12 16:18:02 GMT 2008
     - add minimal docs (thanks to tokuhirom)
     - speed everything up by making the classes immutable
     - lazily build packs
     - simplify the code by splitting pack index reading into
       Git::PurePerl::PackIndex::Version1 and 
       Git::PurePerl::PackIndex::Version2
     - minor tidying of code

0.36 Wed Nov 26 21:49:33 GMT 2008
     - add a class to represent tags
     - complain if the directory does not have a .git directory
     - remove commented-out code
     - only open a pack file or index once
     - remove some unnecessary seeks

0.35 Tue Nov 25 17:37:56 GMT 2008
     - add Data::Stream::Bulk as a prerequisite
     - add all_sha1s method

0.34 Fri Nov 21 17:20:17 GMT 2008
     - speed up finding objects in pack files by using a 
       binary search algorithm

0.33 Thu Nov 20 09:28:36 GMT 2008
     - add support for version 2 pack index files
     - add support for ref_delta objects in pack files
     - add support for ofs_delta objects in pack files
     - update with cleaner tars

0.32 Fri Nov 14 16:47:59 GMT 2008
     - initial release